# BarBeR

./: CMakeLists.txt  README.md  Test Example.ipynb  Train_Test_YOLO.ipynb  Train_with_Detectron.ipynb  k_fold_training_det.sh  requirements.txt
BaFaLo/: BaFaLo_SCNN.py  README.md  arch.py  bafalo_trainer.py  bafalo_trainer_weights.py  bisenetv2.py  contextnet.py  ecb.py  fast_scnn.py  fast_scnn_nano.py  fast_scnn_nano_shuffle.py  fast_scnn_pico.py  fast_scnn_pico_ecb.py  fine_network_trainer.py  icnet.py  loss_functions.py  resnetv1b.py  segbase.py  tile_test.ipynb  training_config_function.py
Creusot2016/: CMakeLists.txt  README.md  barcode_localization.cpp  barcode_localization.h  main.cpp
Gallo2011-Soros2013-Yun2017/: CMakeLists.txt  README.md  main.cpp  wrapper.cpp  wrapper.h
Gallo2011-Soros2013-Yun2017/gallo/: gallo.cpp
Gallo2011-Soros2013-Yun2017/soros/: soros.cpp  soros.h
Gallo2011-Soros2013-Yun2017/src/Linux/tencon/: CMakeLists.txt  wrapper.h
Gallo2011-Soros2013-Yun2017/src/Linux/tencon/gallo/: gallo.h
Gallo2011-Soros2013-Yun2017/src/Linux/tencon/soros/: soros.h
Gallo2011-Soros2013-Yun2017/src/Linux/tencon/yun/: yun.cpp
Gallo2011-Soros2013-Yun2017/yun/: yun.cpp  yun.h
Tekin2012/: CMakeLists.txt  README.md
Tekin2012/BLaDE/: main.cpp
Tekin2012/BLaDE/Release/: makefile
Tekin2012/BLaDE/src/: Android.mk  Decoder.cpp  Decoder.h  Locator.cpp  Locator.h  wrapper.cpp  wrapper.h
Tekin2012/DroidBLaDE/jni/: Android.mk  BLaDE_jni.cpp  BLaDE_jni.h
Tekin2012/DroidBLaDE/src/ski/blade/: FrameProcessor.java
Tekin2012/LinBLaDE/Debug/: objects.mk
Tekin2012/include/ski/: log.h  viterbi.h
Tekin2012/ios/: README.md  build.xcconfig  ios.toolchain.cmake
Zamberletti2013/: CMakeLists.txt  README.md  main.cpp
Zamberletti2013/include/: ImageProcessor.hpp  MLP.hpp  wrapper.h
Zamberletti2013/src/: ImageProcessor.cpp  MLP.cpp  detection.cpp  draw_hist.cpp  wrapper.cpp
Zamberletti2013/utils-3rdparty/: utils.cpp
Zharkov2019/: README.md  dataloader.py  loss_functions.py  models.py  zharkov_trainer.py
algorithms/: bafalo_detector.py  creusot_detector.py  detectors_abs.py  detectron2_detector.py  gallo_detector.py  pytorch_detector.py  soros_detector.py  tekin_detector.py  ultralytics_detector.py  yun_detector.py  zamberletti_detector.py  zharkov_detector.py
algorithms/detectors/: detectors_abs.py  gallo_detector.py  pytorch_detector.py  pytorch_segmentation.py  ultralytics_detector.py  zamberletti_detector.py  zharkov_detector.py
algorithms/readers/: zbar_reader.py
config/: bafalo_training_config.yaml  decoding_testmulticlass.yaml  detectron2_training_config.yaml  generate_coco_annotations_config.json  generate_coco_annotations_config.yaml  test1D_multiROI.json  test1D_multiROI.yaml  test1D_singleROI.json  test1D_singleROI.yaml  test2D_singleROI.json  test2D_singleROI.yaml  test_1D_config.json  test_multiclass.yaml  testmulticlass.yaml  timing_config.yaml  timing_config_320.yaml  timing_config_640.yaml  ultralytics_training_config.yaml  zharkov_training_config.yaml
python/: bounding_box.py  convert_coco_to_yolo.py  create_configuration_yaml.py  create_configuration_yaml_new.py  generate_coco_annotations.py  get_datasets_info.py  test_decodings.py  test_decodings_multi.py  test_decodings_single.py  test_multi_class.py  test_multi_class_copy.py  test_single_class.py  test_single_class_ppehistogram.py  time_benchmark.py  ultralytics_trainer.py  utility.py
python/evaluators/: coco_evaluator.py
python/tools/: create_configuration_yaml.py  create_configuration_yaml_2.py  update_yaml_id.py
python/utils/: activations.py  boundary_loss_utils.py  converters.py  dataloader.py  enumerators.py  general_utils.py  model_wrapper.py  utility.py
python/visualizers/: multi_class_graphs.py  single_class_graphs.py
scripts/: bounding_box.py  convert_coco_to_yolo.py  detectron2_trainer.py  generate_coco_annotations.py  get_datasets_info.py  k_fold_test_1D_singleROI.sh  k_fold_test_2D_singleROI.sh  k_fold_test_decodings.sh  k_fold_test_multiclass.sh  k_fold_training_bafalo.sh  k_fold_training_det.sh  k_fold_training_ult.sh  k_fold_training_zharkov.sh  test_single_class.py  tube.py  ultralytics_trainer.py
scripts/evaluators/: coco_evaluator.py  pascal_voc_evaluator.py
scripts/utils/: general_utils.py
src/: bounding_box.py  generate_coco_annotations.py  test_1D.py  utils.py
src/evaluators/: coco_evaluator.py
